--- a/css/fashionista.css
+++ b/css/fashionista.css
@@ -385,7 +385,7 @@
 
 		nav ul li.active {
 		    background-color: rgba(0,0,0,0.1);
-		    width: 100%;
+		    width: 360px;
 		    display: inline;
 		}
 
